--- a/init/action.yml
+++ b/init/action.yml
@@ -21,7 +21,7 @@ inputs:
       The build mode that will be used to analyze the language. This input is only available when
       analyzing a single CodeQL language per job, for example using a matrix.
 
-      Available build modes will differ based on the language being analyzed. One of: 
+      Available build modes will differ based on the language being analyzed. One of:
 
       - `none`:      The database will be created without building the source code.
                      Available for all interpreted languages and some compiled languages.
@@ -89,9 +89,8 @@ inputs:
     description: A token for fetching external config files and queries if they reside in a private repository in the same GitHub instance that is running this action.
     required: false
   setup-python-dependencies:
-    description: Try to auto-install your python dependencies
-    required: true
-    default: 'true'
+    description: DEPRECATED. CodeQL Action no longer install Python dependencies (from 3.25.0+/2.25.0+)
+    required: false
   source-root:
     description: Path of the root source code directory, relative to $GITHUB_WORKSPACE.
     required: false
