--- a/.github/workflows/__autobuild-direct-tracing.yml
+++ b/.github/workflows/__autobuild-direct-tracing.yml
@@ -29,7 +29,11 @@ jobs:
         include:
           - os: ubuntu-latest
             version: latest
+          - os: windows-latest
+            version: latest
           - os: ubuntu-latest
+            version: nightly-latest
+          - os: windows-latest
             version: nightly-latest
     name: Autobuild direct tracing
     permissions:
@@ -59,6 +63,7 @@ jobs:
           version: ${{ matrix.version }}
           use-all-platform-bundle: 'false'
       - name: Set up Java test repo configuration
+        shell: bash
         run: |
           mv * .github ../action/tests/multi-language-repo/
           mv ../action/tests/multi-language-repo/.github/workflows .github
@@ -73,6 +78,7 @@ jobs:
           tools: ${{ steps.prepare-test.outputs.tools-url }}
 
       - name: Check that indirect tracing is disabled
+        shell: bash
         run: |
           if [[ ! -z "${CODEQL_RUNNER}" ]]; then
             echo "Expected indirect tracing to be disabled, but the" \
