--- a/pr-checks/checks/autobuild-direct-tracing.yml
+++ b/pr-checks/checks/autobuild-direct-tracing.yml
@@ -1,11 +1,12 @@
 name: "Autobuild direct tracing"
 description: "An end-to-end integration test of a Java repository built using 'build-mode: autobuild', with direct tracing enabled"
-operatingSystems: ["ubuntu"]
+operatingSystems: ["ubuntu", "windows"]
 versions: ["latest", "nightly-latest"]
 env:
   CODEQL_ACTION_AUTOBUILD_BUILD_MODE_DIRECT_TRACING: true
 steps:
   - name: Set up Java test repo configuration
+    shell: bash
     run: |
       mv * .github ../action/tests/multi-language-repo/
       mv ../action/tests/multi-language-repo/.github/workflows .github
@@ -20,6 +21,7 @@ steps:
       tools: ${{ steps.prepare-test.outputs.tools-url }}
     
   - name: Check that indirect tracing is disabled
+    shell: bash
     run: |
       if [[ ! -z "${CODEQL_RUNNER}" ]]; then
         echo "Expected indirect tracing to be disabled, but the" \
