Use `merge=union` for `package.json`

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,10 @@
 lib/*.js linguist-generated=true
 .github/workflows/__* linguist-generated=true
 
-# Reduce incidence of needless merge conflicts on CHANGELOG.md
+# Reduce incidence of needless merge conflicts on CHANGELOG.md and package.json
 # The man page at
 # https://mirrors.edge.kernel.org/pub/software/scm/git/docs/gitattributes.html
 # suggests that this might interleave lines arbitrarily, but empirically
 # it keeps added chunks contiguous
 CHANGELOG.md                merge=union
+package.json                merge=union
