--- a/pr-checks/checks/scaling-reserved-ram.yml
+++ b/pr-checks/checks/scaling-reserved-ram.yml
@@ -1,6 +1,7 @@
 name: "Scaling reserved RAM"
 description: "An end-to-end integration test of a multi-language repository with the scaling_reserved_ram feature flag enabled"
-operatingSystems: ["ubuntu", "macos"]
+# TODO: Add ubuntu back for `nightly-latest` and `latest` once CLI v2.17.4 is available.
+operatingSystems: ["macos"]
 env:
   CODEQL_ACTION_SCALING_RESERVED_RAM: true
 steps:
