--- a/.github/workflows/debug-artifacts.yml
+++ b/.github/workflows/debug-artifacts.yml
@@ -25,9 +25,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
-        - stable-20230403
-        - stable-v2.13.5
-        - stable-v2.14.6
+        # TODO: Once CLI v2.17.4 is available and the platform is switched back to ubuntu,
+        #       stable-20230403, stable-v2.13.5, and stable-v2.14.6 can be added back to this matrix.
+        #       Prior to CLI v2.15.1, ARM runners were not supported by the build tracer.
         - stable-v2.15.5
         - stable-v2.16.6
         - default
