--- a/pr-checks/checks/unset-environment.yml
+++ b/pr-checks/checks/unset-environment.yml
@@ -1,5 +1,7 @@
 name: "Test unsetting environment variables"
 description: "An end-to-end integration test that unsets some environment variables"
+# TODO: Switch back to all versions once CLI v2.17.4 is available and running on ubuntu again.
+versions: ["stable-v2.14.6", "stable-v2.15.5", "stable-v2.16.6", "latest", "default", "nightly-latest"] 
 operatingSystems: ["macos"] # TODO: Switch back to ubuntu for `nightly-latest` and `latest` once CLI v2.17.4 is available.
 steps:
   - uses: ./../action/init
