--- a/.github/workflows/debug-artifacts.yml
+++ b/.github/workflows/debug-artifacts.yml
@@ -26,7 +26,8 @@ jobs:
       matrix:
         version:
         # TODO: Once CLI v2.17.4 is available and the platform is switched back to ubuntu,
-        #       stable-20230403, stable-v2.13.5, and stable-v2.14.6 can be added back to this matrix.
+        #       stable-20230403, stable-v2.13.5, and stable-v2.14.6 can be added back to this matrix,
+        #       and the VERSIONS variable in the bash script below. 
         #       Prior to CLI v2.15.1, ARM runners were not supported by the build tracer.
         - stable-v2.15.5
         - stable-v2.16.6
@@ -75,7 +76,7 @@ jobs:
       - name: Check expected artifacts exist
         shell: bash
         run: |
-          VERSIONS="stable-20230403 stable-v2.13.5 stable-v2.14.6 stable-v2.15.5 stable-v2.16.6 default latest nightly-latest"
+          VERSIONS="stable-v2.15.5 stable-v2.16.6 default latest nightly-latest"
           LANGUAGES="cpp csharp go java javascript python"
           for version in $VERSIONS; do
             pushd "./my-debug-artifacts-${version//./}"
