PR Checks: Use `tools: linked` rather than `tools: latest`
Also changes the input and output in the `prepare-test` Action to use `linked`.

--- a/.github/workflows/__build-mode-none.yml
+++ b/.github/workflows/__build-mode-none.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            version: latest
+            version: linked
           - os: ubuntu-latest
             version: nightly-latest
     name: Build mode none
