--- a/.github/workflows/__swift-custom-build.yml
+++ b/.github/workflows/__swift-custom-build.yml
@@ -29,7 +29,7 @@ jobs:
       matrix:
         include:
           - os: macos-latest
-            version: latest
+            version: linked
           - os: macos-latest
             version: default
           - os: macos-latest
