--- a/.github/workflows/__unset-environment.yml
+++ b/.github/workflows/__unset-environment.yml
@@ -35,7 +35,7 @@ jobs:
           - os: macos-latest
             version: stable-v2.16.6
           - os: macos-latest
-            version: latest
+            version: linked
           - os: macos-latest
             version: default
           - os: macos-latest
