--- a/pr-checks/checks/autobuild-action.yml
+++ b/pr-checks/checks/autobuild-action.yml
@@ -1,6 +1,6 @@
 name: "autobuild-action"
 description: "Tests that the C# autobuild action works"
-versions: ["latest"]
+versions: ["linked"]
 steps:
   - uses: ./../action/init
     with:
