--- a/pr-checks/checks/diagnostics-export.yml
+++ b/pr-checks/checks/diagnostics-export.yml
@@ -2,7 +2,7 @@ name: "Diagnostic export"
 description: "Tests that manually added diagnostics are correctly exported to SARIF."
 # Test on 2.12.6 (which requires a workaround in the Action), the latest release, and the latest
 # nightly.
-versions: ["stable-20230403", "latest", "nightly-latest"]
+versions: ["stable-20230403", "linked", "nightly-latest"]
 env:
   CODEQL_ACTION_EXPORT_DIAGNOSTICS: true
 steps:
