--- a/pr-checks/checks/test-autobuild-working-dir.yml
+++ b/pr-checks/checks/test-autobuild-working-dir.yml
@@ -1,6 +1,6 @@
 name: "Autobuild working directory"
 description: "Tests working-directory input of autobuild action"
-versions: ["latest"]
+versions: ["linked"]
 operatingSystems: ["ubuntu"]
 steps:
   - name: Test setup
