--- a/.github/workflows/__multi-language-autodetect.yml
+++ b/.github/workflows/__multi-language-autodetect.yml
@@ -41,7 +41,7 @@ jobs:
           - os: macos-latest
             version: default
           - os: macos-latest
-            version: latest
+            version: linked
           - os: macos-latest
             version: nightly-latest
     name: Multi-language repository
