Specify a single category
We run the same queries across all the OSes so we only need a single category

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -97,3 +97,5 @@ jobs:
       run: ${{steps.init.outputs.codeql-path}} version --format=json
     - name: Perform CodeQL Analysis
       uses: ./analyze
+      with:
+        category: "/language:javascript"
