--- a/.github/workflows/__scaling-reserved-ram.yml
+++ b/.github/workflows/__scaling-reserved-ram.yml
@@ -39,9 +39,15 @@ jobs:
             version: stable-v2.16.6
           - os: macos-latest
             version: default
+          - os: ubuntu-latest
+            version: default
           - os: macos-latest
             version: linked
+          - os: ubuntu-latest
+            version: linked
           - os: macos-latest
+            version: nightly-latest
+          - os: ubuntu-latest
             version: nightly-latest
     name: Scaling reserved RAM
     permissions:
