--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "tsc --build",
     "test": "ava src/**.test.ts --serial --verbose",
     "test-debug": "ava src/**.test.ts --serial --verbose --timeout=20m",
-    "lint": "eslint --report-unused-disable-directives --max-warnings=0 . --ext .js,.ts",
-    "lint-fix": "eslint --report-unused-disable-directives --max-warnings=0 . --ext .js,.ts --fix",
+    "lint": "eslint --report-unused-disable-directives --max-warnings=0 .",
+    "lint-fix": "eslint --report-unused-disable-directives --max-warnings=0 . --fix",
     "removeNPMAbsolutePaths": "removeNPMAbsolutePaths . --force"
   },
   "ava": {
