--- a/start-proxy/action.yml
+++ b/start-proxy/action.yml
@@ -6,6 +6,9 @@ inputs:
     description: The URLs and credentials of package registries
     required: false
     default: "[]"
+  registries_credentials:
+    description: Base64 encoded JSON configuration for the URLs and credentials of the package registries
+    required: false
   proxy_password:
     required: false
     description: The password of the proxy
