--- a/start-proxy/action.yml
+++ b/start-proxy/action.yml
@@ -1,5 +1,5 @@
 name: "CodeQL: Start proxy"
-description: "[Experimental] Start HTTP proxy server"
+description: "[Experimental] Start HTTP proxy server. This action is for internal GitHub used only and will change without notice."
 author: "GitHub"
 inputs:
   registry_secrets:
