--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -24,12 +24,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Lint
+        id: lint
         run: npm run-script lint-ci
 
       - name: Upload sarif
         uses: github/codeql-action/upload-sarif@v3
         # Only upload SARIF for the latest version of Node.js
-        if: matrix.node-types-version == 'current'
+        if: "always() && matrix.node-types-version == 'current'"
         with:
           sarif_file: eslint.sarif
           category: eslint
